--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -41,3 +41,6 @@ quarkus.datasource.jdbc.telemetry=true
 quarkus.log.console.format=%d{HH:mm:ss.SSS} [%t] %-5p [%c{2.}] traceId=%X{traceId}, spanId=%X{spanId}, sampled=%X{sampled} - %s%n%e
 quarkus.http.access-log.pattern="%h %l %u [%{%d/%b/%Y:%H:%M:%S %z}t] \"%r\" %s %b \"%{Referer}i\" \"%{User-Agent}i\" traceId=%{X,traceId} spanId=%{X,spanId}"
 
+
+quarkus.container-image.name=user
+quarkus.container-image.tag=1.0
