--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -47,3 +47,5 @@ quarkus.container-image.tag=1.0
 
 ### quarkus.container-image.build=true
 
+%prod.quarkus.hibernate-orm.sql-load-script=import.sql
+
