--- a/broadcast-service/src/main/resources/application.properties
+++ b/broadcast-service/src/main/resources/application.properties
@@ -51,3 +51,5 @@ quarkus.container-image.name=broadcast-service
 quarkus.container-image.tag=1.0
 
 ### quarkus.container-image.build=true
+
+%prod.quarkus.hibernate-orm.sql-load-script=import.sql
