--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -54,3 +54,5 @@ quarkus.container-image.name=content-service
 quarkus.container-image.tag=1.0
 
 ### quarkus.container-image.build=true
+
+%prod.quarkus.hibernate-orm.sql-load-script=import.sql
