--- a/content-service/src/main/resources/application.properties
+++ b/content-service/src/main/resources/application.properties
@@ -9,7 +9,7 @@ quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.database.generation.create-schemas=true
-quarkus.hibernate-orm.log.sql=true
+#quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.active=true
 quarkus.hibernate-orm.validate-in-dev-mode=true
 quarkus.log.category."org.hibernate.tool.schema".level=TRACE
